# ArgueMe

./: .clang-format  CMakeLists.txt  README.md
examples/: CMakeLists.txt  usage.cpp
include/argp/: command_line.hpp  command_line_fwd.hpp  parser.hpp
include/argueme/: arg.hpp  argfwd.hpp
source/: arg.cpp  command_line.cpp  parser.cpp
test/: CMakeLists.txt  command.cpp  multi_arg.cpp  parsing.cpp  pos_arg.cpp  prefix.cpp  smoke_test.cpp  value_arg.cpp
